pulsar-manager/postgres-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-pulsar-manager
  labels:
    app: postgres
    service: pulsar-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
      service: pulsar-manager
  template:
    metadata:
      labels:
        app: postgres
        service: pulsar-manager
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              name: "postgres-vol"
      volumes:
        - name: postgres-vol
          persistentVolumeClaim:
            claimName: postgres-pvc
