pulsar-manager/postgres-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: pulsar-postgres-svc
  namespace: sn-pulsar
spec:
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: postgres
    service: pulsar-manager
  type: ClusterIP
