pulsar-manager/pulsar-manager-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pulsar-manager-ingress
  namespace: sn-pulsar
spec:
  rules:
  - host: pulsar-manager.my-domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pulsar-manager-svc
            port: 
              number: 9527
